--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>welcome</h1>
-  <h3>we, are we are an open source cyber security agency</h3>
+  <h3>we are we are an open source cyber security agency, completely opencourse and protection</h3>
 </body>
 </html>
